2009-04-07	The InnoDB Team

	* page/page0cur.c:
	Fix Bug#43660 SHOW INDEXES/ANALYZE does NOT update cardinality for
	indexes of InnoDB table

2009-04-06	The InnoDB Team

	* handler/ha_innodb.cc:
	Make the parameter innodb_change_buffering settable by the
	configuration file or mysqld command line options.  Before this
	fix, the initial value specified for this parameter was ignored.

2009-04-06	The InnoDB Team

	* sync/sync0rw.c:
	Avoid a bogus failure in UNIV_SYNC_DEBUG diagnostics.

2009-04-02	The InnoDB Team

	* handler/ha_innodb.cc, include/srv0srv.h, srv/srv0srv.c:
	Add new parameter innodb_spin_wait_delay to set the maximum delay
	between polling for a spin lock.

2009-04-02	The InnoDB Team

	* dict/dict0crea.c, handler/ha_innodb.cc, handler/ha_innodb.h,
	include/dict0mem.h, include/row0merge.h, include/row0mysql.h,
	mysql-test/innodb-index.result, mysql-test/innodb-index.test,
	row/row0merge.c, row/row0sel.c:
	In consistent reads, refuse to use newly created indexes that may
	lack history.

2009-03-20	The InnoDB Team

	* buf/buf0buf.c, include/log0recv.h, log/log0recv.c:
	Remove the compile-time constant parameters of
	recv_recover_page(), recv_scan_log_recs(), and recv_sys_init().

2009-03-20	The InnoDB Team

	* data/data0type.c, handler/ha_innodb.cc, include/ha_prototypes.h:
	Declare innobase_get_at_most_n_mbchars() in ha_prototypes.h.

2009-03-20	The InnoDB Team

	* fil/fil0fil.h, fil/fil0fil.c, srv/srv0start.c:
	Add the parameter hash_size to fil_init().

2009-03-20	The InnoDB Team

	* fil/fil0fil.c:
	Refer to fil_system directly, not via local variables.

2009-03-20	The InnoDB Team

	* page/page0page.c:
	In page_validate(), always report the space id, page number and
	the name of the index when corruption is noticed.

2009-03-20	The InnoDB Team

	* include/log0log.h, include/log0log.ic, log/log0log.c:
	Add in/out comments or const qualifiers to some function
	parameters as appropriate.

2009-03-20	The InnoDB Team
