@@ -352,7 +352,8 @@ dtype_get_fixed_size_low(
 	ulint	prtype,		/* in: precise type */
 	ulint	len,		/* in: length */
 	ulint	mbminlen,	/* in: minimum length of a multibyte char */
-	ulint	mbmaxlen);	/* in: maximum length of a multibyte char */
+	ulint	mbmaxlen,	/* in: maximum length of a multibyte char */
+	ulint	comp);		/* in: nonzero=ROW_FORMAT=COMPACT  */
 #ifndef UNIV_HOTBACKUP
 /***************************************************************************
 Returns the minimum size of a data type. */
@@ -386,7 +387,8 @@ dtype_get_sql_null_size(
 /*====================*/
 				/* out: SQL null storage size
 				in ROW_FORMAT=REDUNDANT */
-	const dtype_t*	type);	/* in: type */
+	const dtype_t*	type,	/* in: type */
+	ulint		comp);	/* in: nonzero=ROW_FORMAT=COMPACT  */
 #ifndef UNIV_HOTBACKUP
 /**************************************************************************
 Reads to a type the stored information which determines its alphabetical
