@@ -398,7 +398,8 @@ dtype_get_fixed_size_low(
 	ulint	prtype,		/* in: precise type */
 	ulint	len,		/* in: length */
 	ulint	mbminlen,	/* in: minimum length of a multibyte char */
-	ulint	mbmaxlen)	/* in: maximum length of a multibyte char */
+	ulint	mbmaxlen,	/* in: maximum length of a multibyte char */
+	ulint	comp)		/* in: nonzero=ROW_FORMAT=COMPACT  */
 {
 	switch (mtype) {
 	case DATA_SYS:
@@ -427,6 +428,8 @@ dtype_get_fixed_size_low(
 	case DATA_MYSQL:
 #ifndef UNIV_HOTBACKUP
 		if (prtype & DATA_BINARY_TYPE) {
+			return(len);
+		} else if (!comp) {
 			return(len);
 		} else {
 			/* We play it safe here and ask MySQL for
@@ -581,13 +584,14 @@ dtype_get_sql_null_size(
 /*====================*/
 				/* out: SQL null storage size
 				in ROW_FORMAT=REDUNDANT */
-	const dtype_t*	type)	/* in: type */
+	const dtype_t*	type,	/* in: type */
+	ulint		comp)	/* in: nonzero=ROW_FORMAT=COMPACT  */
 {
 #ifndef UNIV_HOTBACKUP
 	return(dtype_get_fixed_size_low(type->mtype, type->prtype, type->len,
-					type->mbminlen, type->mbmaxlen));
+					type->mbminlen, type->mbmaxlen, comp));
 #else /* !UNIV_HOTBACKUP */
 	return(dtype_get_fixed_size_low(type->mtype, type->prtype, type->len,
-					0, 0));
+					0, 0, 0));
 #endif /* !UNIV_HOTBACKUP */
 }
