@@ -1577,7 +1577,7 @@ rec_get_converted_size(
 						   dtuple->n_fields, NULL));
 	}
 
-	data_size = dtuple_get_data_size(dtuple);
+	data_size = dtuple_get_data_size(dtuple, 0);
 
 	extra_size = rec_get_converted_extra_size(
 		data_size, dtuple_get_n_fields(dtuple), n_ext);
