@@ -3306,3 +3306,10 @@ Variable_name	Value
 Handler_update	1
 Variable_name	Value
 Handler_delete	1
+CREATE TABLE t1(c CHAR(3) CHARACTER SET UTF8) ROW_FORMAT=REDUNDANT
+ENGINE=InnoDB;
+INSERT INTO t1 VALUES('abc'),(0xEFBCA4EFBCA4EFBCA4);
+UPDATE t1 SET c='DDD' WHERE c=0xEFBCA4EFBCA4EFBCA4;
+UPDATE t1 SET c=NULL WHERE c='DDD';
+UPDATE t1 SET c='DDD' WHERE c IS NULL;
+DROP TABLE t1;
