@@ -2524,6 +2524,19 @@ DROP TABLE bug35537;
 DISCONNECT c1;
 CONNECTION default;
 
+-- enable_query_log
+
+# Bug : no update-in-place of UTF-8 columns in ROW_FORMAT=REDUNDANT
+# (btr_cur_update_in_place not invoked when updating from/to NULL;
+# the update is performed by delete and insert instead)
+CREATE TABLE t1(c CHAR(3) CHARACTER SET UTF8) ROW_FORMAT=REDUNDANT
+ENGINE=InnoDB;
+INSERT INTO t1 VALUES('abc'),(0xEFBCA4EFBCA4EFBCA4);
+UPDATE t1 SET c='DDD' WHERE c=0xEFBCA4EFBCA4EFBCA4;
+UPDATE t1 SET c=NULL WHERE c='DDD';
+UPDATE t1 SET c='DDD' WHERE c IS NULL;
+DROP TABLE t1;
+
 #######################################################################
 #                                                                     #
 # Please, DO NOT TOUCH this file as well as the innodb.result file.   #
