@@ -945,7 +945,8 @@ pars_process_assign_list(
 
 		if (!dict_col_get_fixed_size(
 			    dict_index_get_nth_col(clust_index,
-						   upd_field->field_no))) {
+						   upd_field->field_no),
+			    dict_table_is_comp(node->table))) {
 			changes_field_size = 0;
 		}
 
